# vcpkgConsumingRegistry

./: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json  vcpkgConsumingRegistry.cpp  vcpkgConsumingRegistry.h
